# Budgie

./: CMakeLists.txt  README.md  output.txt  showSource.sh
src/: core.c  cparticle.c  main.c  oop.c  particle.c  pcontacts.c  pfgen.c  plinks.c  random.c  vector.c
src/budgie/: XXXparticle.h  core.h  cparticle.h  math_constants.h  oop.h  pcontacts.h  pfgen.h  plinks.h  precision.h  random.h  vector.h
src/demos/: aapp.c  aapp.h  app.c  app.h  camera.c  camera.h  demo.h  main.c  timing.c  timing.h
src/demos/ballistic/: ballistic.c  bballistic.c  bballistic.h
src/demos/contact/: contact.c  contact.h  cube.c  cube.h  linalg3x3.c  linalg3x3.h
src/demos/fireworks/: ffireworks.c  ffireworks.h  fireworks.c  main.c
src/demos/projection/: projection.c  projection.h
src/demos/spring/: spring.c  spring.h
tests/: test_core.c  test_particle.c  test_vector.c
